fix overflow mobile device

--- a/scss/Layouts/_contact.scss
+++ b/scss/Layouts/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+  overflow-x: hidden;
   @extend %widthCenter;
   margin-bottom: 100px;
   &_title {
