--- a/scss/index.css
+++ b/scss/index.css
@@ -452,6 +452,7 @@ body {
   }
 }
 .resume {
+  overflow-x: hidden;
   padding-top: 96px;
   background-color: #FFF;
 }
@@ -665,6 +666,8 @@ hr {
   }
   .resume_skill_title {
     font-size: 24px;
+  }
+  .resume_skill_title, .resume_education_title, .resume_experience_title {
     line-height: 46px;
   }
   .resume_skill_title span, .resume_education_title span, .resume_experience_title span {
@@ -672,6 +675,7 @@ hr {
   }
 }
 .project {
+  overflow-x: hidden;
   width: 80%;
   margin: 126px auto;
 }
@@ -786,6 +790,7 @@ hr {
   }
 }
 .contact {
+  overflow-x: hidden;
   margin-bottom: 100px;
 }
 .contact_container {
